[gd_scene load_steps=2 format=3 uid="uid://cifn8asgnvula"]

[ext_resource type="Script" path="res://Scripts/Board/BountyBoard.gd" id="1_krs6v"]

[node name="BountyBoard" type="Node2D"]
script = ExtResource("1_krs6v")

[node name="Background" type="ColorRect" parent="."]
offset_right = 200.0
offset_bottom = 200.0
color = Color(0.51, 0.51, 0.51, 1)

[node name="LabelsContainer" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="KnightBountyLabel" type="Label" parent="Background/LabelsContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="QueenBountyLabel" type="Label" parent="Background/LabelsContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="RookBountyLabel" type="Label" parent="Background/LabelsContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="BishopBountyLabel" type="Label" parent="Background/LabelsContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="PawnBountyLabel" type="Label" parent="Background/LabelsContainer"]
layout_mode = 2
size_flags_vertical = 6
